--- a/home.html
+++ b/home.html
@@ -19,9 +19,9 @@
 		<p>Hello World!</p>
 		<p>Welcome to this site. Enjoy this picture of a rubber duck. Have a great day today.</p>	
 
-		<img src="https://m.media-amazon.com/images/I/71LgxJzwFKL._SL1500_.jpg">
+		<img onmouseover='getAlert(this)' src="https://m.media-amazon.com/images/I/71LgxJzwFKL._SL1500_.jpg">
 		<p>Read to yourself</p>
-		<ul>
+		<ul> 
 			<li>I am full of positive loving energy</li>
 			<li>I believe I can be all that I want to be</li>
 			<li>I am full of energy and vitality and my mind is calm and peaceful</li>
