--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,46 @@
-Not implemented yet! 
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Profile</title>
+	<link href="styles.css" rel="stylesheet">
+
+</head>
+<body>
+
+<h1>Hi, I’m Natalie</h1>
+
+<p> content creator, model, and digital nomad.</p>
+<p>  Natalie Perkins is a graduate of Howard University
+     majoring in advertising with a minor concentration in political science. 
+     Throughout her college years, Natalie has been developing her creative skills.
+     For the fall 2019 semester, Natalie studied abroad at the University of Westminister in London, UK. 
+     She spent the semester learning about arts and culture and exploring European countries
+     such as exploring the baths in Budapest, prancing around Barcelona like the Cheetah Girls 
+     and happily riding the bus 1 hr plus each way to lectures. 
+     
+        Natalie also has a passion for 
+     fashion and she has modeled for notable fashion designers and skin care lines in the United States
+     and the United Kingdom.She also has a niche for photography and her photo was featured on the
+     November 2019 Topsify Playlist cover. Living in Europe made Natalie think of Advertising outside
+     of just selling products and for healing the world. She hopes to use advertising to educate 
+     people on sustainability and build up communities. Natalie is recognized for her friendly 
+    demeanor and her positive energy can brighten up a room. </p>
+    <ul> 
+        <h2>Interests</h2>
+        <li>pottery</li>
+        <li>photography</li>
+        <li>outdoors</li>
+        <li>gardening</li>
+        <li>& netflix</li>
+    </ul>
+    <script src="profile.js"></script>
+</body>
+</html>
 
 <br>
 <br>
-
+<button id="color">My Favorite Color</button>
+<button id="place">My Favorite Place</button>
+<button id="ritual">My Favorite Ritual</button>
 <a href="./home.html"><< Back </a>
